# okx-crypto-parser

./: CMakeLists.txt  CMakePresets.json  README.md
source/: CMainWindow.cpp  CMainWindow.hpp  COrderBookWindow.cpp  COrderBookWindow.hpp  MainWindow.cpp  MainWindow.h  main.cpp
source/common/: consts.hpp
